--- a/index.html
+++ b/index.html
@@ -1,8 +1,76 @@
 <!DOCTYPE html>
 <html>
+
    <head>
+      <title>Bird Blankenship - Frontend Developer</title>
+      <link rel = "stylesheet" type = "text/css" href = "styles.css"/>
+      <link rel="preconnect" href="https://fonts.googleapis.com">
+      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+      <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
    </head>
+
    <body>
-      <!-- Write your HTML in this file! -->
+
+      <!-- Header -->
+
+      <div id="header-content">
+      <header>
+      <h1>Bird Blankenship</h1>
+      <h2>Frontend Developer</h2>
+      </header>
+      </div>
+
+      <!-- Main content -->
+
+      <main>
+         <article>
+            <div>
+            <h3>Hello!</h3>
+            <img src = "images/portrait.png" id = "portrait" alt = "portrait image"/>
+            <p>
+               I’m a front end web developer &amp; designer currently based out of the Midwest. I specialize in creating beautiful, accessible websites. When I am not solving creative technical challenges, I can be found hiking and gardening.
+            </p>
+            </div>
+         </article>
+
+         <h4>Background</h4>
+            <p>
+               I have a strong background in digital design &amp; animation, where I grew notable brands like Better Life, Hasbro and Symmetry with engaging design across web, email and social media platforms. I fell in love with using programming to deliver interactive experiences, and am transitioning my deep knowledge of front end design into development work.
+            </p>
+         <h4>Education</h4>
+            <p>
+               I am currently studying Web Development at LaunchCode, where I am learning the latest cutting-edge web development technologies. I have a Bachelor of Arts from Webster University in Communications with an Animation specialization, where I mastered visual communications in the interactive digital media space. I’ve also earned a certificate from Google in Digital Marketing &amp; E-Commerce, rounding out my knowledge with a solid foundation in user journeys, digital marketing campaigns and SEO. 
+            </p>
+
+         <h4>Technologies</h4>
+            <p>
+               A list of technologies I love to use:
+               <ul>
+                  <li>HTML5</li>
+                  <li>CSS</li>
+                  <li>JavaScript</li>
+                  <li>Node.JS</li>
+                  <li>Git</li>
+                  <li>Github</li>
+                  <li>Visual Studio Code</li>
+                  <li>Figma</li>
+                  <li>Adobe Creative Suite</li>
+               </ul>
+
+            </p>
+         <h4>Hobbies</h4>
+            <p>
+                  In my free time, I enjoy outdoor and social activities. I picked up gardening during the pandemic, and grow the best tomatoes you've ever eaten. I love volunteering out in my state and local parks to keep them beautiful. There, I maintain and restore wildlife habitats, and help other volunteers learn how to identify and control invasive species. I also enjoy board games and trying new foods!
+            </p>
+
+      </main>
+
+      <!-- Footer -->
+
+      <footer>
+         <p>&copy; Bird Blankenship 2024</p>
+      </footer>
+
    </body>
+
 </html>
