--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
       <div id="header-content">
       <header>
-      <h1>Bird Blankenship</h1>
+      <h1 id="mainHeading">Bird Blankenship</h1>
       <h2>Frontend Developer</h2>
       </header>
       </div>
@@ -24,24 +24,28 @@
 
       <main>
          <article>
-            <div>
             <h3>Hello!</h3>
             <img src = "images/portrait.png" id = "portrait" alt = "portrait image"/>
             <p>
-               I’m a front end web developer &amp; designer currently based out of the Midwest. I specialize in creating beautiful, accessible websites. When I am not solving creative technical challenges, I can be found hiking and gardening.
+               I’m a <strong>front end web developer &amp; designer</strong> currently based out of the Midwest. I specialize in creating beautiful, accessible websites. When I am not solving creative technical challenges, I can be found hiking and gardening.
             </p>
-            </div>
          </article>
 
+         <div class = "content">
          <h4>Background</h4>
             <p>
-               I have a strong background in digital design &amp; animation, where I grew notable brands like Better Life, Hasbro and Symmetry with engaging design across web, email and social media platforms. I fell in love with using programming to deliver interactive experiences, and am transitioning my deep knowledge of front end design into development work.
+               I have a strong background in digital design &amp; animation, where I grew notable brands like <strong>Better Life</strong>, <strong>Hasbro</strong> and <strong>Symmetry</strong> with engaging design across web, email and social media platforms. I fell in love with using programming to deliver interactive experiences, and am transitioning my deep knowledge of front end design into development work.
             </p>
+         </div>
+
+         <div class = "content">
          <h4>Education</h4>
             <p>
-               I am currently studying Web Development at LaunchCode, where I am learning the latest cutting-edge web development technologies. I have a Bachelor of Arts from Webster University in Communications with an Animation specialization, where I mastered visual communications in the interactive digital media space. I’ve also earned a certificate from Google in Digital Marketing &amp; E-Commerce, rounding out my knowledge with a solid foundation in user journeys, digital marketing campaigns and SEO. 
+               I am currently studying Web Development at <strong>LaunchCode</strong>, where I am learning the latest cutting-edge web development technologies. I have a Bachelor of Arts from <strong>Webster University</strong> in Communications with an Animation specialization, where I mastered visual communications in the interactive digital media space. I’ve also earned a certificate from <strong>Google</strong> in Digital Marketing &amp; E-Commerce, rounding out my knowledge with a solid foundation in user journeys, digital marketing campaigns and SEO. 
             </p>
+         </div>
 
+         <div class = "content">
          <h4>Technologies</h4>
             <p>
                A list of technologies I love to use:
@@ -56,19 +60,33 @@
                   <li>Figma</li>
                   <li>Adobe Creative Suite</li>
                </ul>
-
             </p>
+            </div>
+
+         <div class = "content">
          <h4>Hobbies</h4>
             <p>
                   In my free time, I enjoy outdoor and social activities. I picked up gardening during the pandemic, and grow the best tomatoes you've ever eaten. I love volunteering out in my state and local parks to keep them beautiful. There, I maintain and restore wildlife habitats, and help other volunteers learn how to identify and control invasive species. I also enjoy board games and trying new foods!
             </p>
+         </div>
 
+         <!-- <div class = "content">
+         <h4>Contact me!</h4>
+         <p
+         </div> -->
       </main>
 
       <!-- Footer -->
 
       <footer>
-         <p>&copy; Bird Blankenship 2024</p>
+         <div class="contactInfo">
+         <a href="https://www.linkedin.com/in/blankenshipdesign/"> Linkedin </a>
+         <a href="https://github.com/Tinxte"> Github </a>
+         <a href="mailto:birdblankenship@outlook.com"> Email </a>
+         <a href="https://birdblankenship.weebly.com/"> Design Portfolio </a>
+         </div>
+
+         <p class = "paragraph-inverted">&copy; Bird Blankenship 2024</p>
       </footer>
 
    </body>
