--- a/index.html
+++ b/index.html
@@ -70,22 +70,22 @@
             </p>
          </div>
 
-         <!-- <div class = "content">
+         <div class = "content">
          <h4>Contact me!</h4>
-         <p
-         </div> -->
+            <p id = testP class = funParagraph>
+               <em>Looking for a reliable, creative web developer? Feel free to reach out, or check out more of my work:</em>
+                  <br><br>
+               <a href="https://www.linkedin.com/in/blankenshipdesign/"> Linkedin </a> <br>
+               <a href="https://github.com/Tinxte"> Github </a> <br>
+               <a href="mailto:birdblankenship@outlook.com"> Email </a> <br>
+               <a href="https://birdblankenship.weebly.com/"> Design Portfolio </a> <br>
+            </p>
+         </div>
       </main>
 
       <!-- Footer -->
 
       <footer>
-         <div class="contactInfo">
-         <a href="https://www.linkedin.com/in/blankenshipdesign/"> Linkedin </a>
-         <a href="https://github.com/Tinxte"> Github </a>
-         <a href="mailto:birdblankenship@outlook.com"> Email </a>
-         <a href="https://birdblankenship.weebly.com/"> Design Portfolio </a>
-         </div>
-
          <p class = "paragraph-inverted">&copy; Bird Blankenship 2024</p>
       </footer>
 
